Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34969

test fail main.spatial_utility_function_simplify (aarch64 and ppc64le)

    XMLWordPrintable

Details

    Description

      From commit https://github.com/MariaDB/server/commit/d551c922e5dede96defa88ee57ed7c5e290bfd17

      From: https://buildbot.mariadb.org/#/grid?branch=preview-11.7-preview

      ppc64le https://buildbot.mariadb.org/#/builders/318/builds/26889/steps/7/logs/stdio

      main.spatial_utility_function_simplify   w6 [ fail ]
              Test ended at 2024-09-16 16:54:46
      CURRENT_TEST: main.spatial_utility_function_simplify
      --- /home/buildbot/ppc64le-debian-11/build/mysql-test/main/spatial_utility_function_simplify.result	2024-09-16 16:11:51.000000000 +0000
      +++ /home/buildbot/ppc64le-debian-11/build/mysql-test/main/spatial_utility_function_simplify.reject	2024-09-16 16:54:46.518392868 +0000
      @@ -136,7 +136,7 @@
       LINESTRING(0 0,1 1,3 -3,5 5,7 -7,10 10)
       SELECT ST_ASTEXT(ST_SIMPLIFY(ST_GEOMFROMTEXT('LINESTRING(0 0,0 1,1 1,1 2,2 2,2 3,3 3,3 4,4 4,4 5,5 5)'), 0.6)) c;
       c
      -LINESTRING(0 0,0 1,1 1,1 2,2 2,4 5,5 5)
      +LINESTRING(0 0,0 1,1 1,1 2,4 4,4 5,5 5)
       SELECT ST_ASTEXT(ST_SIMPLIFY(ST_GEOMFROMTEXT('LINESTRING(0 0,0 1,1 1,1 2,2 2,2 3,3 3,3 4,4 4,4 5,5 5)'), 0.8)) c;
       c
       LINESTRING(0 0,5 5)
      @@ -182,7 +182,7 @@
       SELECT ST_ASTEXT(ST_SIMPLIFY(ST_GEOMFROMTEXT('MULTILINESTRING((0 0,0 1,1 1,1 2,2 2,2 3,3 3,3 4,4 4,4 5,5 5),'
                                                                    '(0 0,1 0,1 1,2 1,2 2,3 2,3 3,4 3,4 4,5 4,4 4))'), 0.6)) c;
       c
      -MULTILINESTRING((0 0,0 1,1 1,1 2,2 2,4 5,5 5),(0 0,1 0,1 1,2 1,4 4,5 4,4 4))
      +MULTILINESTRING((0 0,0 1,1 1,1 2,4 4,4 5,5 5),(0 0,1 0,1 1,2 1,4 4,5 4,4 4))
       SELECT ST_ASTEXT(ST_SIMPLIFY(ST_GEOMFROMTEXT('MULTILINESTRING((0 0,0 1,1 1,1 2,2 2,2 3,3 3,3 4,4 4,4 5,5 5),'
                                                                    '(0 0,1 0,1 1,2 1,2 2,3 2,3 3,4 3,4 4,5 4,4 4))'), 0.7)) c;
       c
      

      aarch64 https://buildbot.mariadb.org/#/builders/493/builds/12950/steps/7/logs/stdio

      main.spatial_utility_function_simplify   w12 [ fail ]
              Test ended at 2024-09-16 16:50:07
      CURRENT_TEST: main.spatial_utility_function_simplify
      --- /home/buildbot/aarch64-centos-stream9/build/mysql-test/main/spatial_utility_function_simplify.result	2024-09-16 16:11:51.000000000 +0000
      +++ /home/buildbot/aarch64-centos-stream9/build/mysql-test/main/spatial_utility_function_simplify.reject	2024-09-16 16:50:07.318197989 +0000
      @@ -136,7 +136,7 @@
       LINESTRING(0 0,1 1,3 -3,5 5,7 -7,10 10)
       SELECT ST_ASTEXT(ST_SIMPLIFY(ST_GEOMFROMTEXT('LINESTRING(0 0,0 1,1 1,1 2,2 2,2 3,3 3,3 4,4 4,4 5,5 5)'), 0.6)) c;
       c
      -LINESTRING(0 0,0 1,1 1,1 2,2 2,4 5,5 5)
      +LINESTRING(0 0,0 1,1 1,1 2,4 4,4 5,5 5)
       SELECT ST_ASTEXT(ST_SIMPLIFY(ST_GEOMFROMTEXT('LINESTRING(0 0,0 1,1 1,1 2,2 2,2 3,3 3,3 4,4 4,4 5,5 5)'), 0.8)) c;
       c
       LINESTRING(0 0,5 5)
      @@ -182,7 +182,7 @@
       SELECT ST_ASTEXT(ST_SIMPLIFY(ST_GEOMFROMTEXT('MULTILINESTRING((0 0,0 1,1 1,1 2,2 2,2 3,3 3,3 4,4 4,4 5,5 5),'
                                                                    '(0 0,1 0,1 1,2 1,2 2,3 2,3 3,4 3,4 4,5 4,4 4))'), 0.6)) c;
       c
      -MULTILINESTRING((0 0,0 1,1 1,1 2,2 2,4 5,5 5),(0 0,1 0,1 1,2 1,4 4,5 4,4 4))
      +MULTILINESTRING((0 0,0 1,1 1,1 2,4 4,4 5,5 5),(0 0,1 0,1 1,2 1,4 4,5 4,4 4))
       SELECT ST_ASTEXT(ST_SIMPLIFY(ST_GEOMFROMTEXT('MULTILINESTRING((0 0,0 1,1 1,1 2,2 2,2 3,3 3,3 4,4 4,4 5,5 5),'
                                                                    '(0 0,1 0,1 1,2 1,2 2,3 2,3 3,4 3,4 4,5 4,4 4))'), 0.7)) c;
       c
      

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              danblack Daniel Black
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1h
                  1d 1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.